--- a/Question10_wholesale_clustering.ipynb
+++ b/Question10_wholesale_clustering.ipynb
@@ -158,15 +158,7 @@
    "source": [
     "### 10(a) Explanation – Clustering vs Prediction\n",
     "\n",
-    "Clustering (like k-means) is an **unsupervised** technique: it groups customers according to similarity in their\n",
-    "spending patterns **without using target labels**.\n",
-    "\n",
-    "- It is not a direct supervised prediction method (like regression or classification).\n",
-    "- It is mainly used for **exploratory analysis and segmentation**.\n",
-    "\n",
-    "Indirectly, we can use clusters to help prediction, for example:\n",
-    "- Use cluster membership as an additional feature in a supervised model.\n",
-    "- Use cluster averages to build simple rules (e.g., expected spending by cluster)."
+    "Clustering does **not directly make predictions of a target variable**, but it can group customers and then be used **indirectly** for decision-making and for assigning new customers to segments."
    ]
   },
   {
@@ -335,13 +327,7 @@
    "source": [
     "### 10(c) Explanation – Choosing Number of Clusters\n",
     "\n",
-    "We use two internal measures from the cluster-analysis slides:\n",
-    "- **SSE (within-cluster sum of squares)**: decreases as K increases. The **elbow method** looks for a point where\n",
-    "  the decrease in SSE slows significantly.\n",
-    "- **Silhouette score**: measures cohesion and separation; higher values (closer to 1) are better.\n",
-    "\n",
-    "By examining the elbow plot and silhouette scores, we choose a K with a good trade-off between compact clusters and\n",
-    "separation. The code selects K with the maximum silhouette score as a practical choice."
+    "We perform k-means on the **standardized spending variables only**, and choose **K = 3** clusters because it maximizes the silhouette score and gives a reasonable elbow in the SSE plot."
    ]
   },
   {
@@ -412,13 +398,40 @@
    "source": [
     "### 10(d) Explanation – Interpreting Cluster Profiles\n",
     "\n",
-    "By inspecting the average spending of each cluster across product categories, we can characterize clusters, e.g.:\n",
-    "- Cluster A: high in Grocery and Detergents_Paper → likely **retailers**.\n",
-    "- Cluster B: high in Fresh and Frozen → possibly **restaurants or hotels**.\n",
-    "- Cluster C: generally low spending → **small customers**.\n",
+    "**Cluster 0 – \"Grocery / Detergent heavy\" customers**\n",
+    "- Very high **Milk**, **Grocery**, and **Detergents_Paper**.\n",
+    "- Moderate **Fresh** and **Frozen**.\n",
+    "- Medium **Delicassen**.\n",
     "\n",
-    "If these interpretations align with domain knowledge, the clusters are **reasonable** and useful for applications\n",
-    "like targeted marketing or customer relationship management."
+    "👉 Likely **retail stores or supermarkets**, buying large quantities of everyday items and cleaning supplies.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **Cluster 1 – \"Low-volume / general\" customers**\n",
+    "- Moderate **Fresh**.\n",
+    "- Relatively low **Milk**, **Grocery**, **Detergents_Paper**, **Delicassen**.\n",
+    "- Some spending in **Frozen**.\n",
+    "\n",
+    "👉 Likely **small shops, cafes, or restaurants** with moderate, diverse but smaller orders.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **Cluster 2 – \"Fresh–Frozen & Delicassen specialists\"**\n",
+    "- Extremely high **Fresh** and especially **Frozen** (48,701 m.u.).\n",
+    "- Very high **Delicassen**.\n",
+    "- Medium **Milk** and **Grocery**, very low **Detergents_Paper**.\n",
+    "\n",
+    "👉 Likely **specialty food businesses** such as **caterers, gourmet suppliers, or high-end restaurants** that focus on fresh, frozen, and delicatessen products.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Reasonableness of the Clusters**\n",
+    "\n",
+    "- The clusters correspond to **intuitive customer segments**: retail, small mixed buyers, and specialty high-end food customers.\n",
+    "- Spending patterns within a cluster are **consistent** (e.g., cluster 0 heavy in everyday goods, cluster 2 heavy in high-value food categories).\n",
+    "- Silhouette score around **0.55** (for K=3) indicates **good separation and compactness**.\n",
+    "\n",
+    "Yes, the clusters are **reasonable and interpretable**. They provide meaningful segments that a wholesale distributor can use for **marketing strategies, pricing, and service customization**."
    ]
   }
  ],
