--- a/Question2_widget_sales.ipynb
+++ b/Question2_widget_sales.ipynb
@@ -207,24 +207,22 @@
    "metadata": {},
    "source": [
     "### 2(a) Explanation – Stationarity and ADF Test\n",
+    "A time series is **weakly stationary** if:\n",
+    "- The **mean** \\(E[y_t]\\) is constant.\n",
+    "- The **variance** \\(Var(y_t)\\) is constant.\n",
+    "- The **autocovariance** depends only on lag.\n",
     "\n",
-    "**Stationarity (weak/second-order stationarity)** means:\n",
-    "- The **mean** $E[y_t]$ is constant over time.\n",
-    "- The **variance** $\\operatorname{Var}(y_t)$ is constant over time.\n",
-    "- The **autocovariance** $\\gamma(h) = \\operatorname{Cov}(y_t, y_{t-h})$ depends only on the lag $h$, not on $t$.\n",
+    "ADF Hypotheses:\n",
+    "- \\(H_0\\): non-stationary (unit root)\n",
+    "- \\(H_1\\): stationary\n",
     "\n",
-    "To check stationarity we can:\n",
-    "1. Inspect the **time plot** visually: trend or changing variance indicates non-stationarity.\n",
-    "2. Look at **rolling mean and rolling standard deviation**: they should be roughly constant if stationary.\n",
-    "3. Use formal tests like the **Augmented Dickey–Fuller (ADF)** test.\n",
+    "Rolling mean/std and ADF results show:\n",
+    "- ADF statistic = **−1.5122**\n",
+    "- p-value = **0.5275**\n",
     "\n",
-    "ADF hypotheses:\n",
-    "- $H_0$: the series has a **unit root** (non-stationary).\n",
-    "- $H_1$: the series is **stationary**.\n",
-    "If the ADF statistic is **less than** the critical value (e.g. 5% level) or the p-value is **< 0.05**, we reject $H_0$.\n",
+    "Since p > 0.05, the series is **non-stationary**.\n",
     "\n",
-    "From the plot and test output (fill from your run): if p-value $> 0.05$ and rolling mean/std are not stable, the\n",
-    "widget sales series is **not stationary**."
+    "---"
    ]
   },
   {
@@ -308,7 +306,20 @@
     "- Plot the series and rolling statistics.\n",
     "- Run the ADF test.\n",
     "\n",
-    "If p-value $< 0.05$ and rolling mean/std look stable, then the differenced series is approximately **stationary**."
+    "If p-value $< 0.05$ and rolling mean/std look stable, then the differenced series is approximately **stationary**.\n",
+    "\n",
+    "First difference:\n",
+    "\\[\n",
+    "y'_t = y_t - y_{t-1}\n",
+    "\\]\n",
+    "\n",
+    "ADF after differencing:\n",
+    "- ADF = **−10.5767**\n",
+    "- p-value ≈ **7e−19**\n",
+    "\n",
+    "Conclusion: differenced series **is stationary**, so \\(d = 1\\).\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -372,7 +383,19 @@
     "So we:\n",
     "1. Plot ACF and PACF of the stationary series.\n",
     "2. Check which one shows a clear cut-off.\n",
-    "3. Choose candidate values of p or q accordingly, and then compare models (e.g., by AIC) if needed."
+    "3. Choose candidate values of p or q accordingly, and then compare models (e.g., by AIC) if needed.\n",
+    "\n",
+    "Interpretation rules:\n",
+    "- AR(p): PACF cutoff\n",
+    "- MA(q): ACF cutoff\n",
+    "\n",
+    "Observed:\n",
+    "- ACF spikes at lag 1 then cuts → **MA behavior**\n",
+    "- PACF decays gradually\n",
+    "\n",
+    "Conclusion: **MA(1) or MA(2)** is appropriate.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -468,7 +491,23 @@
     "4. Repeat through the test period.\n",
     "\n",
     "We then integrate the differenced forecasts back to the original level by cumulative sum:\n",
-    "$$ \\hat{y}_t = y_{t_0} + \\sum_{k=t_0+1}^t \\hat{y}'_k. $$"
+    "$$ \\hat{y}_t = y_{t_0} + \\sum_{k=t_0+1}^t \\hat{y}'_k. $$\n",
+    "\n",
+    "MA(2):\n",
+    "\\[\n",
+    "y'_t = c + ε_t + θ_1 ε_{t-1} + θ_2 ε_{t-2}\n",
+    "\\]\n",
+    "\n",
+    "Multi-step forecast becomes constant because future errors have expectation 0.\n",
+    "\n",
+    "Rolling one-step forecast adapts to new data.\n",
+    "\n",
+    "Your MAE:\n",
+    "\\[\n",
+    "MAE = 0.8479\n",
+    "\\]\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -537,7 +576,15 @@
     "- The **naïve last-value model**.\n",
     "\n",
     "The model with the **smallest MAE** is considered the best among these. Typically, MA(2) should outperform simple\n",
-    "naïve methods if the data have short-term autocorrelation that MA(2) captures."
+    "naïve methods if the data have short-term autocorrelation that MA(2) captures.\n",
+    "\n",
+    "| Model | MAE |\n",
+    "|------|------|\n",
+    "| MA(2) rolling | **0.8479** |\n",
+    "| Naïve mean | 1.3018 |\n",
+    "| Naïve last-value | 1.8739 |\n",
+    "\n",
+    "Conclusion: **MA(2) is best**."
    ]
   }
  ],
