--- a/Question5_pima_PCA.ipynb
+++ b/Question5_pima_PCA.ipynb
@@ -213,7 +213,29 @@
     "\n",
     "Encoding Outcome as 0 for non-diabetic and 1 for diabetic is just a **numerical encoding of the classes**. The\n",
     "problem remains classification; the encoding makes it convenient to use algorithms such as logistic regression,\n",
-    "decision trees, and random forests, which expect numerical labels."
+    "decision trees, and random forests, which expect numerical labels.\n",
+    "\n",
+    "The **Outcome** variable represents whether a patient is:\n",
+    "\n",
+    "- **0 → non‑diabetic (negative)**\n",
+    "- **1 → diabetic (positive)**\n",
+    "\n",
+    "This is a **categorical**, **binary** target variable.  \n",
+    "Therefore, the predictive task is **classification**, not regression.\n",
+    "\n",
+    "### Why not regression?\n",
+    "\n",
+    "Regression predicts **continuous numerical values**.  \n",
+    "Here, the goal is to predict a **category**, not a numeric quantity.\n",
+    "\n",
+    "### Effect of encoding Outcome into 0 and 1\n",
+    "Binary labels (0/1) do **not** turn the problem into regression. They:\n",
+    "\n",
+    "- Allow ML models to compute probabilities (e.g., logistic regression).\n",
+    "- Make metrics like accuracy, precision, recall applicable.\n",
+    "- Preserve the categorical nature.\n",
+    "\n",
+    "So the task **remains classification**, even if encoded numerically."
    ]
   },
   {
@@ -314,7 +336,16 @@
     "\n",
     "From the printed values and plot, we choose the smallest number $k$ such that cumulative EVR exceeds 0.9.\n",
     "These first $k$ PCs will then be used as input features for classification, reducing dimensionality while keeping\n",
-    "most of the information."
+    "most of the information.\n",
+    "\n",
+    "### Interpretation\n",
+    "- PC1 captures **28.5%** of total variance.\n",
+    "- PC1–PC6 capture **89.4%** of variance.\n",
+    "- To exceed **90%**, we need **7 components**.\n",
+    "\n",
+    "Therefore:\n",
+    "\n",
+    "📌 **Suggested number of PCA components = 6 or 7**, depending on the threshold used (90% in class)."
    ]
   }
  ],
