--- a/Question6_pima_preprocessing_corr_gini.ipynb
+++ b/Question6_pima_preprocessing_corr_gini.ipynb
@@ -272,7 +272,23 @@
     "1. Replace 0 with NaN in those features.\n",
     "2. Impute NaN using median (robust to skew).\n",
     "\n",
-    "Outcome is the target and is not imputed."
+    "Outcome is the target and is not imputed.\n",
+    "\n",
+    "The dataset summary shows:\n",
+    "\n",
+    "- Severe missingness in some features:\n",
+    "  - SkinThickness → **227 missing**\n",
+    "  - Insulin → **374 missing**\n",
+    "- Moderate missingness in:\n",
+    "  - BloodPressure → **35**\n",
+    "  - BMI → **11**\n",
+    "  - Glucose → **5**\n",
+    "\n",
+    "Pairwise deletion means:\n",
+    "- When computing correlations, each pair of variables uses **only the rows where both variables are present**.\n",
+    "- This **preserves more data** compared to listwise deletion (dropping all rows with any missing value).\n",
+    "\n",
+    "This is appropriate because the missingness is **uneven** across variables."
    ]
   },
   {
@@ -391,7 +407,19 @@
     "Thus:\n",
     "- Correlation can be used as a quick **filter** for features.\n",
     "- Gini importance (from decision trees / random forests) can detect **non-linear** relationships as well.\n",
-    "Both can be combined to decide which features are most relevant for predicting Outcome."
+    "Both can be combined to decide which features are most relevant for predicting Outcome.\n",
+    "\n",
+    "\n",
+    "Both methods identify:\n",
+    "\n",
+    "- **Glucose as the strongest predictor** (highest correlation and highest Gini).\n",
+    "- BMI, Age, Pregnancies appear consistently important.\n",
+    "- Features with strong linear correlation tend to have high Gini importance, but:\n",
+    "  - **Gini captures nonlinear relationships**\n",
+    "  - Correlation only captures **linear strength**\n",
+    "\n",
+    "📌 **Conclusion:**  \n",
+    "Correlation and Gini importance largely agree, but the Decision Tree provides a more flexible, model-based ranking."
    ]
   },
   {
@@ -440,17 +468,13 @@
    "source": [
     "### 6(c) Explanation – Interpretation of Correlation Matrix\n",
     "\n",
-    "From the sorted correlations with Outcome (fill actual values from output):\n",
-    "- **Glucose** typically shows the highest positive correlation with Outcome → higher glucose → higher chance of\n",
-    "  diabetes.\n",
-    "- **BMI** and **Age** may show moderate positive correlations.\n",
-    "- Other features may have weaker correlations.\n",
+    "**Interpretation:**\n",
     "\n",
-    "Correlation among predictors also reveals:\n",
-    "- Possible **multicollinearity** (e.g., BMI vs SkinThickness), indicating redundancy.\n",
-    "- Motivation for **feature reduction** techniques (like PCA) as seen in Question 5.\n",
+    "- **Glucose concentration** is by far the dominant linear predictor of diabetes.\n",
+    "- **BMI, Insulin, SkinThickness** strongly relate to metabolic health → meaningful predictors.\n",
+    "- **Age** moderately correlates, consistent with higher risk in older individuals.\n",
     "\n",
-    "Thus, we identify key predictors and understand relationships among features, guiding model building."
+    "Overall, PCA and tree-based results are consistent with these correlations."
    ]
   }
  ],
