--- a/Question7_pima_tree_randomforest.ipynb
+++ b/Question7_pima_tree_randomforest.ipynb
@@ -266,17 +266,34 @@
    "source": [
     "### 7(c) Explanation – Full vs PCA Features\n",
     "\n",
-    "We compare models trained on:\n",
-    "1. **All original features**.\n",
-    "2. **PCA-reduced features** (e.g., first 3 principal components).\n",
+    "**Analysis**\n",
+    "**1. Decision Tree (full features)**\n",
+    "- Train accuracy = **0.849**  \n",
+    "- Test accuracy = **0.732**  \n",
+    "- Shows moderate overfitting.  \n",
+    "- Sensitive to noise because a single tree forms very specific rules.\n",
     "\n",
-    "Typical observation:\n",
-    "- Random forest with full features often achieves the **highest test accuracy**.\n",
-    "- PCA-based models may have slightly lower accuracy but use fewer dimensions, reducing complexity and the risk of\n",
-    "  overfitting in high-dimensional cases.\n",
+    "**2. Random Forest (full features)**\n",
+    "- Train accuracy = **1.000** → Expected overfitting (forest memorizes training data).  \n",
+    "- Test accuracy = **0.745**, the highest among all models.  \n",
+    "- Combines multiple trees → better generalization.\n",
     "\n",
-    "The exact numbers come from the printed accuracies. In this dataset with only 8 features, PCA mainly serves as an\n",
-    "illustration; the random forest already handles correlations well."
+    "**3. Effect of PCA on Tree Models**\n",
+    "- PCA compresses and mixes original features → decision trees lose interpretability of splits.  \n",
+    "- Both tree and forest with PCA have **slightly lower** test accuracy:\n",
+    "  - DT PCA = 0.723  \n",
+    "  - RF PCA = 0.736  \n",
+    "- PCA is not ideal for tree models, which prefer axis-aligned splits on original variables.\n",
+    "\n",
+    "**Conclusion:**  \n",
+    "**Random Forest with full features performs the best** and generalizes better than all PCA-based models.\n",
+    "\n",
+    "**Interpretation**\n",
+    "- Class **0** (non-diabetic) is much easier to classify due to being the majority class.  \n",
+    "- Class **1** has lower recall (0.53) → many diabetics are missed.  \n",
+    "- This confirms the dataset suffers from **class imbalance**.\n",
+    "\n",
+    "---"
    ]
   }
  ],
