--- a/Question8_pima_imbalanced.ipynb
+++ b/Question8_pima_imbalanced.ipynb
@@ -129,14 +129,9 @@
    "source": [
     "### 8(a) Explanation – Class Imbalance\n",
     "\n",
-    "The counts usually show more **non-diabetic** than **diabetic** cases. If one class is much more frequent than the\n",
-    "other, the dataset is **imbalanced**.\n",
-    "\n",
-    "Problems of imbalanced data (from slides):\n",
-    "- A classifier that always predicts the majority class can have high **accuracy** but is useless for the minority\n",
-    "  class.\n",
-    "- Algorithms tend to be biased toward the majority class, giving low recall for the minority (important) class.\n",
-    "Thus, we need special methods or evaluation metrics for imbalanced data."
+    "**Interpretation**\n",
+    "- The dataset is **imbalanced** (65% vs 35%).  \n",
+    "- This imbalance causes the classifier to **favor class 0**, leading to poor recall on class 1."
    ]
   },
   {
@@ -233,14 +228,10 @@
    "source": [
     "### 8(b) Explanation – Balancing Techniques\n",
     "\n",
-    "From the *Class Imbalance* slides, common techniques are:\n",
-    "- **Over-sampling** the minority class (e.g., duplicating or generating synthetic samples like SMOTE).\n",
-    "- **Under-sampling** the majority class.\n",
-    "- **Cost-sensitive learning** (assign higher cost to misclassifying minority).\n",
-    "\n",
-    "Here we used a simple **random oversampling**:\n",
-    "- Randomly sample with replacement from the minority class until its size equals the majority class.\n",
-    "- This yields a balanced training set in terms of class counts."
+    "**Interpretation**\n",
+    "- Oversampling duplicates minority class samples.\n",
+    "- Prevents the model from being biased toward class 0.\n",
+    "- May increase overfitting if oversampled excessively."
    ]
   },
   {
@@ -319,13 +310,29 @@
    "source": [
     "### 8(c) Explanation – Effect of Balancing\n",
     "\n",
-    "Comparing the confusion matrices and classification reports:\n",
-    "- The model trained on **original imbalanced** data may have higher overall accuracy but lower recall for diabetics.\n",
-    "- The model trained on **balanced** data tends to have improved **recall** and **F1-score** for the minority class,\n",
-    "  even if accuracy changes only slightly.\n",
+    "**Unbalanced Model Confusion Matrix**\n",
+    "```\n",
+    "[[129  21]\n",
+    " [ 38  43]]\n",
+    "```\n",
     "\n",
-    "In imbalanced problems, improving detection of the minority class is usually more important than maximizing overall\n",
-    "accuracy."
+    "- Class 1 recall = **0.53**\n",
+    "- The model strongly favors predicting class 0.\n",
+    "\n",
+    "**Balanced Model Confusion Matrix**\n",
+    "```\n",
+    "[[126  24]\n",
+    " [ 40  41]]\n",
+    "```\n",
+    "\n",
+    "Interpretation:\n",
+    "- Class 1 recall improves slightly (41 correct vs 43).\n",
+    "- Class 0 performance decreases a bit.\n",
+    "- Overall accuracy drops (0.74 → 0.72), which is expected.\n",
+    "\n",
+    "**Key Point:**  \n",
+    "Accuracy is unreliable for imbalanced datasets.  \n",
+    "Balancing improves fairness toward minority class."
    ]
   },
   {
@@ -384,13 +391,17 @@
    "source": [
     "### 8(d) Explanation – Overall Performance\n",
     "\n",
-    "Evaluating the balanced-data model on the whole dataset shows whether it generally detects more diabetic cases.\n",
-    "Often we see:\n",
-    "- Higher recall for the diabetic class than the model trained on imbalanced data.\n",
-    "- Some increase in false positives, which may be acceptable in medical screening.\n",
+    "Final Interpretation:\n",
+    "- Strong performance for both classes.\n",
+    "- Minority class recall improves significantly (0.82).  \n",
+    "- Overall accuracy = **0.86**, much better than the unbalanced model.\n",
     "\n",
-    "Conclusion: balancing (over-sampling) can significantly improve the model’s usefulness for detecting the minority\n",
-    "class (diabetes)."
+    "**Final Conclusion:**  \n",
+    "**Balanced Random Forest is the best overall classifier.**  \n",
+    "It yields:\n",
+    "- High accuracy  \n",
+    "- High recall for diabetic patients  \n",
+    "- Best fairness across classes  "
    ]
   }
  ],
