--- a/Question9_xy_clustering.ipynb
+++ b/Question9_xy_clustering.ipynb
@@ -268,12 +268,35 @@
    "source": [
     "### 9(c) Explanation – Comparison\n",
     "\n",
-    "K-means tends to produce **compact, roughly spherical** clusters due to SSE minimization. Single-link hierarchical\n",
-    "clustering can create clusters with arbitrary shapes, and may suffer from the **chaining effect** (one cluster\n",
-    "connecting distant points along a chain of near neighbors).\n",
+    "**K-means Clustering**\n",
+    "From the plot:\n",
+    "- K-means forms **three clean, compact clusters**.\n",
+    "- The clusters correspond well to natural groupings:\n",
+    "  - A **high‑y** cluster (top region)\n",
+    "  - A **mid‑y** cluster\n",
+    "  - A **low‑y** cluster (bottom region)\n",
     "\n",
-    "In this simple 2D example with three Gaussian blobs, both methods should find similar groupings. The dendrogram also\n",
-    "shows where merges occur; a large jump in distance suggests a good place to cut into clusters."
+    "K-means works well because:\n",
+    "- It seeks **spherical** clusters around centroids.\n",
+    "- The dataset contains visually separable groups.\n",
+    "\n",
+    "**Hierarchical Clustering (Single-Link)**\n",
+    "Observations from the plot:\n",
+    "- Many points merge into a **single long chain-like cluster**.\n",
+    "- A few points become isolated small clusters.\n",
+    "- Clusters look less meaningful than K-means.\n",
+    "\n",
+    "Reason:\n",
+    "- Single-link is sensitive to **chaining**:\n",
+    "  - A sequence of close points may link many distant points together.\n",
+    "  - Produces stretched, elongated clusters.\n",
+    "\n",
+    "**Dendrogram Interpretation**\n",
+    "- Early merges happen at **very small distances**, showing points close in space.  \n",
+    "- Larger merges occur at distances **>4**, indicating dissimilar groups.  \n",
+    "- Cutting at 3 clusters would produce **one large chain and two tiny clusters**, not meaningful groups.\n",
+    "\n",
+    "**K-means provides far more meaningful clusters than single-link hierarchical clustering** for this dataset."
    ]
   },
   {
